syntax = "proto3";

option csharp_namespace = "Work.GrpcDemo.Server.Protos";

import "google/protobuf/timestamp.proto";

message TrackingMessage {
	int32 deviceId = 1;
	int32 speed = 2;
	google.protobuf.Timestamp stamp = 4;
	repeated string deviceNames = 5;
}
message TrackingResponse {
	bool success = 1;
}